@@ -30,7 +30,7 @@ jobs:
       shell: cmd
       run: |
         python -m pip install --upgrade pip setuptools --ignore-installed
-        python -m pip install --upgrade pypiwin32 wheel
+        python -m pip install --upgrade pypiwin32 wheel win10toast
         python -m pip install -r requirements-build.txt
 
     - name: Grab iso-639 lists
