@@ -12,7 +12,7 @@ for root, dirs, files in os.walk('fastflix'):
 		all_fastflix_files.append((os.path.join(root,file), root))
 
 
-all_imports = collect_submodules('pydantic') + ['dataclasses', 'colorsys']
+all_imports = collect_submodules('pydantic') + ['dataclasses', 'colorsys', 'win10toast']
 with open("requirements-build.txt", "r") as reqs:
     for line in reqs:
         package = line.split("=")[0].split(">")[0].split("<")[0].replace('"', '').replace("'", '').strip()
