@@ -4,6 +4,7 @@
 
 * Adding ability to extract HDR10+ metadata
 * Adding #178 selector for number of autocrop positions throughout video (thanks to bmcassagne)
+* Adding Windows 10 toast style notification for queue complete success
 
 ## Version 4.1.2
 
